<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">爱宠</string>
    <string name="action_settings">设置</string>
    <string name="hello_world">Hello world!</string>
    <!-- app common -->
    <string name="app_loging">加载中...</string>

    <!-- camera -->
    <string name="take_picture">拍照</string>
    <string name="choose_gallery">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="camera_title">请选择</string>

    <!-- splash -->
    <string name="title_activity_splash">启动</string>
    <string name="app_version">v%1s Beta</string>
    <!-- welcome login or reg -->
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>
    <string name="title_activity_welcome_register_or_login">欢迎</string>
    <string name="title_activity_login_has_account">登录</string>
    <string name="btn_enter">立即体验</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="email">邮箱</string>
    <string name="input_account_hint">请输入邮箱</string>
    <string name="password">密码</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="login_toggle_password_show">显示</string>
    <string name="login_toggle_password_hide">隐藏</string>
    <string name="forgot_password">忘记密码？</string>
    <string name="ok_button">确定</string>
    <string name="login_empty_account">账号不能为空</string>
    <string name="login_error_invalid_email">邮箱格式不正确</string>
    <string name="login_empty_password">密码不能为空</string>
    <string name="login_failure_other">登录失败</string>
    <string name="login_failure_auth">用户名或密码不正确</string>
    <string name="login_loading">正在登录...</string>
    <string name="sina_login">新浪微博登录</string>
    <string name="wechat_login">微信账号登录</string>
    <string name="qq_login">QQ账号登录</string>
    <string name="user_info">用户信息</string>
    <string name="pet_info">宠物信息</string>
    <string name="nickname">昵称</string>
    <string name="nickname_hint">请输入用户昵称</string>
    <string name="pet_name">名称</string>
    <string name="pet_name_hint">请输入宠物名称</string>
    <string name="pet_gender">性别</string>
    <string name="pet_gender_hint">请选择宠物性别</string>
    <string name="pet_family">类型</string>
    <string name="pet_family_hint">请选择宠物类型</string>
    <string name="changeAccount">切换账号</string>
    <string name="pet_birthday">生日</string>
    <string name="title_activity_register3rd">完善爱宠资料</string>
    <string name="logining">正在登录....</string>
    <string name="skip_button">跳过</string>
    <!-- main -->
    <string name="sub_nav_title_home">主页</string>
    <string name="sub_nav_title_discover">发现</string>
    <string name="sub_nav_title_news">动态</string>
    <string name="exit_once_again">再按一次退出程序</string>
    <string name="related_me">与我相关</string>
    <string name="my_follows">我关注的</string>

    <!-- comment -->
    <string name="title_activity_comment">评论</string>
    <string name="comment_submit">提交</string>
    <string name="comment_num_text">查看全部  %1s 条评论</string>

    <!-- like -->
    <string name="title_activity_like">赞</string>
    <string name="liked_num_text">等%1s人觉得很赞</string>
    <!-- publish -->
    <string name="title_activity_feed_publish">发布</string>
    <string name="btn_publish_text">发布</string>
    <string name="publish_loading">正在发布...</string>
    <string name="publish_hint">您现在的想法...</string>
    <string name="publish_location_tips">所在位置 %1s</string>
    <!-- larger_image -->
    <string name="title_activity_larger_image">LargerImageActivity</string>
    <!-- menu -->
    <string name="title_activity_main_pop_dialog">菜单</string>
    <string name="nav_menu_space">我的空间</string>
    <string name="nav_menu_feedback">意见反馈</string>
    <string name="nav_menu_setting">系统设置</string>
    <string name="item_share">分享</string>
    <string name="item_delete">删除</string>

    <!-- simpleFeed -->
    <string name="title_activity_simple_feed">消息详情</string>

    <!-- FeedbackActivity -->
    <string name="title_activity_feedback">意见反馈</string>
    <string name="feedback_no_empty">反馈内容不能为空</string>
    <string name="feedback_hint">请填写您的意见和建议</string>
    <string name="submitting">正在提交...</string>
    <string name="feedback_success">意见反馈提交成功</string>
    <string name="feedback_failure">意见反馈提交失败</string>

    <!-- space -->
    <string name="title_activity_space">我的空间</string>
    <string name="title_space">%1s的空间</string>
    <string name="feeds">帖子</string>
    <string name="follows">关注</string>
    <string name="fans">粉丝</string>
    <string name="bonusPoint">积分</string>
    <string name="user_edit">资料修改</string>
    <string name="follow_text">关注</string>
    <string name="unfollow_text">取消关注</string>
    <string name="pet_edit">编辑宠物资料</string>

    <!-- news -->
    <string name="news_item_favor">称赞了您的消息</string>
    <string name="news_item_follow">开始关注您</string>
    <string name="news_item_comment">回复了您的消息</string>

    <!-- petty -->


    <!-- fans -->
    <string name="title_activity_fans">粉丝</string>

    <!-- follow -->
    <string name="title_activity_follows">关注</string>
    <!-- bonus_point -->
    <string name="title_activity_bonus_point">积分</string>
    <!-- petty -->
    <string name="title_activity_petty">我的宠物</string>
    <string name="title_activity_location">我的位置</string>

    <!-- 个人资料 -->
    <string name="save">保存</string>
    <string name="title_activity_user">个人资料</string>
    <string name="nickname_empty">昵称不能为空</string>
    <string name="input_account_once_hint">请输入邮箱(保存后不可改)</string>
    <string name="description">简介</string>
    <string name="description_hint">一句话介绍</string>
    <string name="gender">性别</string>
    <string name="gender_hint">请选择性别</string>
    <string name="birthday">生日</string>
    <string name="birthday_hint">请选择生日</string>
    <string name="city">城市</string>
    <string name="city_hint">请选择城市</string>
    <string name="save_success">保存成功</string>

    <!-- 系统设置 -->
    <string name="title_activity_change_password">修改密码</string>
    <string name="oldPassword">原密码</string>
    <string name="newPassword">新密码</string>
    <string name="old_password_empty">原密码不能为空</string>
    <string name="new_password_empty">新密码不能为空</string>
    <string name="oldPassword_hint">未设置过可不填</string>
    <string name="newPassword_hint">请输入新密码</string>
    <string name="title_activity_setting">设置</string>
    <string name="logout">注销</string>

    <!-- update -->
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">立即更新</string>
    <string name="soft_update_later">残忍拒绝</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="title_activity_about">当前版本\t\t</string>

    <!-- Share SDK -->
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.mob.com</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="pinterest_client_inavailable">Pinterest版本过低或者没有安装，需要升级或安装Pinterest才能使用！</string>
    <string name="instagram_client_inavailable">Instagram版本过低或者没有安装，需要升级或安装Instagram才能使用！</string>
    <string name="yixin_client_inavailable">目前您的易信版本过低或未安装，需要安装易信才能使用</string>
    <string name="line_client_inavailable">目前您的Line版本过低或未安装，需要安装Line才能使用</string>
    <string name="kakaotalk_client_inavailable">目前您的KakaoTalk版本过低或未安装，需要安装KakaoTalk才能使用</string>
    <string name="kakaostory_client_inavailable">目前您的KakaoStory版本过低或未安装，需要安装KakaoStory才能使用</string>
    <string name="whatsapp_client_inavailable">目前您的WhatsApp版本过低或未安装，需要安装WhatsApp才能使用</string>
    <string name="baidutieba_client_inavailable">目前您的百度贴吧版本过低或未安装，需要安装百度贴吧才能使用</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="wechatfavorite">微信收藏</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">人人网</string>
    <string name="kaixin">开心网</string>
    <!-- <string name="email">邮件</string> -->
    <string name="shortmessage">信息</string>
    <string name="sohumicroblog">搜狐微博</string>
    <string name="sohusuishenkan">搜狐随身看</string>
    <string name="neteasemicroblog">网易微博</string>
    <string name="douban">豆瓣</string>
    <string name="youdao">有道云笔记</string>
    <string name="evernote">印象笔记</string>
    <string name="linkedin">领英</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="pinterest">Pinterest</string>
    <string name="flickr">Flickr</string>
    <string name="tumblr">Tumblr</string>
    <string name="dropbox">Dropbox</string>
    <string name="vkontakte">VK</string>
    <string name="instagram">Instagram</string>
    <string name="yixin">易信</string>
    <string name="yixinmoments">易信朋友圈</string>
    <string name="mingdao">明道</string>
    <string name="kakaotalk">KakaoTalk</string>
    <string name="kakaostory">KakaoStory</string>
    <string name="line">Line</string>
    <string name="bluetooth">蓝牙</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="pocket">Pocket</string>
    <string name="instapaper">Instapaper</string>
    <string name="instapaper_email">邮箱</string>
    <string name="instapaper_pwd">密码</string>
    <string name="instapaper_login">登录</string>
    <string name="instapaper_logining">登录中…</string>
    <string name="instapager_email_or_password_incorrect">Email或密码不正确</string>
    <string name="facebookmessenger">Facebook Messenger</string>
    <string name="baidutieba">百度贴吧</string>
    <string name="share_to_baidutieba">分享到百度贴吧</string>
    <string name="share_to_qzone">分享到QQ空间</string>
    <string name="share_to_qq">分享到QQ</string>
    <string name="mingdao_share_content">网页分享</string>
    <string name="share_to_mingdao">分享到明道</string>
    <string name="share_to_qzone_default">来自%s的分享</string>
    <string name="use_login_button">请改用“登录”按钮</string>
    <!-- ShareSDK OneKeyShare -->
    <!-- <string name="cancel">取消</string> -->
    <string name="finish">完成</string>
    <string name="sharing">分享操作正在后台进行…</string>
    <string name="share_to">分享到</string>
    <string name="share">分享</string>
    <string name="multi_share">图文分享</string>
    <string name="share_completed">分享成功</string>
    <string name="share_canceled">分享已取消</string>
    <string name="select_one_plat_at_least">请选择一个目标平台</string>
    <string name="list_friends">%s的朋友</string>
    <string name="share_failed">分享失败</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中…</string>
    <string name="shake2share">摇晃手机！</string>
    <string name="select_a_friend">请选择一个朋友</string>

</resources>