<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ChangePwdActivity" >

<include
        android:id="@+id/include"
        layout="@layout/action_bar_simple_back" />
<LinearLayout
        android:id="@+id/login_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/action_bar"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_list_top_bg_white"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/oldPassword"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/oldPassword"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/oldPassword_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/hint_text_color"
                android:textSize="16sp"
                android:windowSoftInputMode="stateHidden" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/setting_list_bottom_bg_white"
            android:gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16sp"
                android:text="@string/newPassword"
                android:textColor="@color/text_black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="0.0dip"
                android:layout_height="wrap_content"
                android:layout_marginLeft="26dp"
                android:layout_weight="1.0"
                android:background="@null"
                android:gravity="center_vertical"
                android:hint="@string/newPassword_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/hint_text_color"
                android:textSize="16sp"
                android:windowSoftInputMode="stateHidden" />

            <TextView
                android:id="@+id/login_toggle_password"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:background="@drawable/login_toggle_password_bg"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/login_toggle_password_show"
                android:textColor="@color/text_black"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/ok_button"
        android:background="@drawable/button_light_selector"
        android:textColor="@color/title_gray"
        android:textSize="16sp" />
</LinearLayout>

