<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

    <include
        android:id="@+id/include"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        layout="@layout/action_bar_simple_back" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/include" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:text="@string/user_info"
                android:textSize="18sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:background="@drawable/setting_list_single_bg_white" >

                <FrameLayout
                    android:id="@+id/frameLayout"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true" >

                    <include layout="@layout/vertical_divider" />

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="72dp"
                        android:layout_height="72dp"
                        android:layout_gravity="center"
                        android:scaleType="fitXY"
                        android:src="@drawable/avatar" />
                </FrameLayout>

                <LinearLayout
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/frameLayout"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical" >

                   
                            <EditText
                                android:id="@+id/nickname"
                                android:layout_width="0.0dip"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_weight="1.0"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/nickname_hint"
                                android:inputType="text"
                                android:singleLine="true"
                                android:textColor="@color/text_black"
                                android:textColorHint="@color/hint_text_color"
                                android:textSize="16sp" />
                        </LinearLayout>

                        <include layout="@layout/horizontal_divider" />

                        <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="48dp"
                            android:gravity="center_vertical" >

                            <AutoCompleteTextView
                                android:id="@+id/account"
                                android:layout_width="0.0dip"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_weight="1.0"
                                android:background="@null"
                                android:gravity="center_vertical"
                                android:hint="@string/input_account_hint"
                                android:inputType="textEmailAddress"
                                android:singleLine="true"
                                android:textColor="@color/text_black"
                                android:textColorHint="@color/hint_text_color"
                                android:textSize="16sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/pet_info"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_list_top_bg_white"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pet_name"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pet_name"
                    android:layout_width="0.0dip"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/pet_name_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_list_center_bg_white"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pet_gender"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pet_gender"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/pet_gender_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:background="@drawable/setting_list_bottom_bg_white"
                android:gravity="center_vertical" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/pet_family"
                    android:textColor="@color/text_black"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/pet_family"
                    android:layout_width="0.0dip"
                    android:layout_height="fill_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1.0"
                    android:background="@null"
                    android:focusable="false"
                    android:gravity="center_vertical"
                    android:hint="@string/pet_family_hint"
                    android:inputType="text"
                    android:singleLine="true"
                    android:textColor="@color/text_black"
                    android:textColorHint="@color/hint_text_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="@drawable/button_light_selector"
                android:gravity="center"
                android:text="@string/ok_button"
                android:textColor="@color/title_gray"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>